transcript functionalitye
