# app/models/response_models.go
@@ -14,20 +14,29 @@ type LoginResponse struct {
 }
 
 // IPRResponse represents a JSON response
-// to the IPR POST request
+// to the IPR POST request.
 type IPRResponse struct {
 	HTTPError       //Error, if one is attached to the response
 	IPR       []IPR `json:"ipr"` //The resulting IPR(s)
 }
 
 // ReportCardResponse represents a JSON response
-// to the Report Card POST request
+// to the Report Card POST request.
 type ReportCardResponse struct {
 	HTTPError             //Error, if one is attached to the response
 	ReportCard ReportCard `json:"reportCard"` //The resulting report card
 }
 
+// ScheduleResponse represents a JSON response
+// to the Schedule POST request.
 type ScheduleResponse struct {
 	HTTPError          //Error, if one is attached to the response
 	Schedule  Schedule `json:"schedule"` //The resulting schedule
+}
+
+// TranscriptResponse represents a JSON response
+// to the Transcript POST request.
+type TranscriptResponse struct {
+	HTTPError             //Error, if one is attached to the response
+	Transcript Transcript `json:"transcript"` //The resulting transcript
 }
